public class AnimationParameters
{
    public const string IsWalking = "IsWalking";

    public const string IsBackingUp = "IsBackingUp";
    public const string Punch = "Punch";
    public const string GotHit = "GotHit";

    public const string Anim_Forward = "Walking";
    public const string Anim_Backward = "WalkBackwards";

}
